fixed length issue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sorting-visualizer",
+  "name": "react-sorting-visualizer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
